// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Person /> should render a basic compact person 1`] = `
<styled.div
  className="person"
  isHoverable={false}
>
  <styled.div>
    <Avatar
      initials="JW"
      size="small"
    />
  </styled.div>
  <styled.div>
    <class_1
      isInline={true}
    >
      John Wick
    </class_1>
  </styled.div>
</styled.div>
`;

exports[`<Person /> should render a basic person 1`] = `
<styled.div
  className="person"
  isHoverable={false}
>
  <styled.div>
    <Avatar
      initials="JW"
      size="medium"
    />
  </styled.div>
  <styled.div>
    <class_1
      isInline={false}
    >
      John Wick
    </class_1>
  </styled.div>
</styled.div>
`;

exports[`<Person /> should render a compact person with lots of data 1`] = `
<styled.div
  className="person"
  isHoverable={false}
>
  <styled.div>
    <Avatar
      imageUrl="www.example.com"
      initials="JW"
      size="small"
      statusDot="primary"
    />
  </styled.div>
  <styled.div>
    <class_1
      isInline={true}
    >
      John Wick
    </class_1>
    <class_1
      className="person-secondary-text"
      isInline={true}
      isSmall={true}
      isTruncated={true}
    >
      (Guy Killer)
    </class_1>
  </styled.div>
</styled.div>
`;

exports[`<Person /> should render a person with lots of data 1`] = `
<styled.div
  className="person"
  isHoverable={false}
>
  <styled.div>
    <Avatar
      imageUrl="www.example.com"
      initials="JW"
      size="medium"
      statusDot="primary"
    />
  </styled.div>
  <styled.div>
    <class_1
      isInline={false}
    >
      John Wick
    </class_1>
    <class_1
      className="person-secondary-text"
      isInline={false}
      isSmall={true}
      isTruncated={true}
    >
      Guy Killer
    </class_1>
    <class_1
      className="person-tertiary-text"
      isInline={false}
      isTruncated={true}
    >
      In Cinemas 2019
    </class_1>
  </styled.div>
</styled.div>
`;
